--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header>
         <div class="container">
             <h1>MailyDaily 📬</h1>
-            <p>Your daily email assistant</p>
+            <p>Your daily AI email assistant</p>
         </div>
     </header>
 
